--- a/template.yaml
+++ b/template.yaml
@@ -1,5 +1,5 @@
 apiVersion: ${version}
-kind: <%= kind %>
+kind: service
 metadata:
   labels:
   <% for(label in labels){ %>
@@ -12,19 +12,8 @@ spec:
       command:
         - cat
       tty: true
-  <% if( dockerBuild() ){ %>
-- name: docker
-  image: docker:18.05-dind
-  securityContext:
-    privileged: true
-  volumeMounts:
-    - name: dind-storage
-      mountPath: /var/lib/docker
-  <% } %>
-  <% if( dockerBuild() ){ %>
-volumes:
-  - name: dind-storage
-    emptyDir: {}
-  <% } else { %>
-volumes: {}
-  <% } %>
+    - name: docker
+      image: docker:18.05-dind
+      securityContext:
+        privileged: true
+      volumeMounts:
